BREAKING CHANGE: Use Keycloak for auth
- Remove User entity and related classes
- Remove Refresh Token logic
- Remove Custom Auth filters
- Simplify Project structure related to auth
- Use userId (sub value in jwt) to store notes against user
- Add lombok support