@@ -13,8 +13,6 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import stonenotes.builders.NoteBuilder;
-import stonenotes.builders.UserBuilder;
-import stonenotes.model.User;
 import stonenotes.model.Note;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -27,19 +25,19 @@ class NoteRepositoryTest {
     @Autowired
     private TestEntityManager testEntityManager;
 
-    private Note createNote(String title, String content, User user) {
+    private Note createNote(String title, String content, String userId) {
         return NoteBuilder.aNote()
                 .withTitle(title)
                 .withContent(content)
-                .withUser(user)
+                .withUserId(userId)
                 .build();
     }
 
-    private void createAndSaveNote(String title, String content, User user) {
+    private void createAndSaveNote(String title, String content, String userId) {
         Note note = NoteBuilder.aNote()
                 .withTitle(title)
                 .withContent(content)
-                .withUser(user)
+                .withUserId(userId)
                 .build();
         testEntityManager.persistAndFlush(note);
     }
@@ -47,18 +45,16 @@ class NoteRepositoryTest {
     @Test
     void shouldFindNotesByUserIdOrderedByCreatedAtDesc() throws InterruptedException {
         // Given
-        User user = UserBuilder.aUser().build();
-        testEntityManager.persistAndFlush(user);
-
-        Note note1 = createNote("First Note", "Content 1", user);
-        Note note2 = createNote("Second Note", "Content 2", user);
+        String userId = "test_user_id";
+        Note note1 = createNote("First Note", "Content 1", userId);
+        Note note2 = createNote("Second Note", "Content 2", userId);
 
         testEntityManager.persistAndFlush(note1);
         Thread.sleep(10);
         testEntityManager.persistAndFlush(note2);
 
         // When
-        List<Note> notes = noteRepository.findByUserIdOrderByCreatedAtDesc(user.getId());
+        List<Note> notes = noteRepository.findByUserIdOrderByCreatedAtDesc(userId);
 
         assertThat(notes).hasSize(2);
         assertThat(notes.get(0).getTitle()).isEqualTo("Second Note");
@@ -68,33 +64,30 @@ class NoteRepositoryTest {
     @Test
     void shouldOnlyReturnNotesForSpecificUser() {
         // Given
-        User user1 = UserBuilder.aUser().withEmail("user1@example.com").build();
-        User user2 = UserBuilder.aUser().withEmail("user2@example.com").build();
-        testEntityManager.persistAndFlush(user1);
-        testEntityManager.persistAndFlush(user2);
+        String userId_1 = "test_user_id_1";
+        String userId_2 = "test_user_id_2";
 
-        Note user1Note = createNote("User 1 Note", "Content", user1);
-        Note user2Note = createNote("User 2 Note", "Content", user2);
+        Note user1Note = createNote("User 1 Note", "Content", userId_1);
+        Note user2Note = createNote("User 2 Note", "Content", userId_2);
         testEntityManager.persistAndFlush(user1Note);
         testEntityManager.persistAndFlush(user2Note);
 
         // When
-        List<Note> user1Notes = noteRepository.findByUserIdOrderByCreatedAtDesc(user1.getId());
+        List<Note> user1Notes = noteRepository.findByUserIdOrderByCreatedAtDesc(userId_1);
 
         // Then
         assertThat(user1Notes).hasSize(1);
-        assertThat(user1Notes.get(0).getTitle()).isEqualTo("User 1 Note");
+        assertThat(user1Notes.getFirst().getTitle()).isEqualTo("User 1 Note");
     }
 
     @Test
     void shouldFindNoteByIdAndUserId() {
-        User user = UserBuilder.aUser().build();
-        testEntityManager.persistAndFlush(user);
+        String userId = "test_user_id";
 
-        Note note = createNote("Test Note", "Content", user);
+        Note note = createNote("Test Note", "Content", userId);
         testEntityManager.persistAndFlush(note);
 
-        Optional<Note> foundNote = noteRepository.findByIdAndUserId(note.getId(), user.getId());
+        Optional<Note> foundNote = noteRepository.findByIdAndUserId(note.getId(), userId);
 
         assertThat(foundNote).isPresent();
         assertThat(foundNote.get().getTitle()).isEqualTo("Test Note");
@@ -102,38 +95,35 @@ class NoteRepositoryTest {
 
     @Test
     void shouldNotFindNoteForDifferentUser() {
-        User user1 = UserBuilder.aUser().withEmail("user1@example.com").build();
-        User user2 = UserBuilder.aUser().withEmail("user2@example.com").build();
-        testEntityManager.persistAndFlush(user1);
-        testEntityManager.persistAndFlush(user2);
+        String userId_1 = "test_user_id_1";
+        String userId_2 = "test_user_id_2";
 
-        Note note = createNote("Test Note", "Content", user1);
+        Note note = createNote("Test Note", "Content", userId_1);
         testEntityManager.persistAndFlush(note);
 
-        Optional<Note> foundNote = noteRepository.findByIdAndUserId(note.getId(), user2.getId());
+        Optional<Note> foundNote = noteRepository.findByIdAndUserId(note.getId(), userId_2);
 
         assertThat(foundNote).isEmpty();
     }
 
     @Test
     void shouldReturnPaginatedNotesOrderedByCreatedAtDesc() throws InterruptedException {
-        User user = UserBuilder.aUser().build();
-        user = testEntityManager.persistAndFlush(user);
+        String userId = "test_user_id";
 
-        createAndSaveNote("Note 1", "Content 1", user);
+        createAndSaveNote("Note 1", "Content 1", userId);
         Thread.sleep(10);
-        createAndSaveNote("Note 2", "Content 2", user);
+        createAndSaveNote("Note 2", "Content 2", userId);
         Thread.sleep(10);
-        createAndSaveNote("Note 3", "Content 3", user);
+        createAndSaveNote("Note 3", "Content 3", userId);
         Thread.sleep(10);
-        createAndSaveNote("Note 4", "Content 4", user);
+        createAndSaveNote("Note 4", "Content 4", userId);
         Thread.sleep(10);
-        createAndSaveNote("Note 5", "Content 5", user);
+        createAndSaveNote("Note 5", "Content 5", userId);
         Thread.sleep(10);
 
         Pageable pageable = PageRequest.of(0, 3, Sort.by(Sort.Direction.DESC, "createdAt"));
 
-        Page<Note> result = noteRepository.findByUserIdOrderByCreatedAtDesc(user.getId(), pageable);
+        Page<Note> result = noteRepository.findByUserIdOrderByCreatedAtDesc(userId, pageable);
 
         assertThat(result.getContent()).hasSize(3);
         assertThat(result.getTotalElements()).isEqualTo(5);
